# imxrt-uart-log

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: rust.yml
examples/: log_dma.rs  log_uart.rs  t4_blocking.rs  t4_dma.rs  t4_idle.rs
examples/demo/: mod.rs
src/: blocking.rs  dma.rs  filters.rs  lib.rs
src/blocking/: sink.rs
src/dma/: sink.rs  writer.rs
