[package]
name = "imxrt-uart-log"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
description = "Logging over an i.MX RT serial interface"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "log"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-uart-log"

[dependencies]
embedded-hal = "0.2.3"
log = "0.4.8"
cortex-m = "0.6.2"

[dependencies.imxrt-hal]
git = "https://github.com/mciantyre/imxrt-rs"
branch = "proto/uart-log-release"

[features]
# TODO add features for other variants once available in the HAL.
#
# Since the HAL only supports the imxrt1062 right now, we only support
# it here. For convenience, we make it the default.
default = ["imxrt1062"]
imxrt1062 = ["imxrt-hal/imxrt1062"]
