[package]
name = "imxrt-uart-log"
version = "0.2.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
description = "Logging over an i.MX RT serial interface"
readme = "README.md"
keywords = ["imxrt", "nxp", "embedded", "log"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-uart-log"

[dependencies]
embedded-hal = "0.2.4"
log = "0.4.11"
cortex-m = "0.6.3"

[dependencies.imxrt-hal]
version = "0.4.0"
git = "https://github.com/imxrt-rs/imxrt-rs.git"

[features]
# TODO add features for other variants once available in the HAL.
#
# Since the HAL only supports the imxrt1062 right now, we only support
# it here. For convenience, we make it the default.
default = ["imxrt1062"]
imxrt1062 = ["imxrt-hal/imxrt1062"]
# Bring Your Own Buffer
#
# Disables the default DMA static buffer, and exposes an interface for users to specify
# their own buffer. Use this if you want a smaller or larger DMA buffer, or you need to
# control the buffer's static allocation.
byob = []

# Teensy 4-specific developer dependencies
#
# These are pulled in only when checking & building examples. You may need
# additional build dependencies to build these. See the README for details.
[target.thumbv7em-none-eabihf.dev-dependencies]
teensy4-rt  = { git = "https://github.com/mciantyre/teensy4-rs.git" }
teensy4-fcb = { git = "https://github.com/mciantyre/teensy4-rs.git" }

[target.thumbv7em-none-eabihf.dev-dependencies.imxrt-hal]
version = "0.4.0"
features = ["imxrt1062", "rt"]
git = "https://github.com/imxrt-rs/imxrt-rs.git"

[dev-dependencies]
panic-halt = "0.2.0"
